@@ -1,3 +1,11 @@
+2007-12-10  Mathias Hasselmann  <mathias@openismus.com>
+
+	* configure.in:
+	* gtkdoc-depscan.in:
+	* Makefile.am:
+	  Add gtkdoc-depscan, which resolves source code dependencies
+	  by scanning devhelp2 books.
+
 2007-12-10  Stefan Kost  <ensonic@users.sf.net>
 
 	* devhelp2.xsd:
